# FastLint

./: README.md  fastlint.opam.template  mypy-tests.ini  mypy.ini  pyfastlint.nix  setup.py
cli/: MANIFEST.in  Makefile  Pipfile  park.cfg  pyproject.toml  setup.py
cli/src/fastlint/: __main__.py  autofix.py  cli.py  config_resolver.py  console.py  constants.py  core_output.py  core_runner.py  core_targets_plan.py  dependency_aware_rule.py  engine.py  env.py  error.py  error_handler.py  error_location.py  exclude_rules.py  fastlint_core.py  fastlint_types.py  git.py  ignores.py  join_rule.py  main.py  meta.py  metrics.py  nofastlint.py  notifications.py  output.py  output_extra.py  parsing_data.py  resolve_dependency_source.py  resolve_subprojects.py  rpc.py  rpc_call.py  rule.py  rule_lang.py  rule_match.py  run_scan.py  scan_report.py  settings.py  state.py  (+8 more)
cli/src/fastlint/app/: auth.py  project_config.py  scans.py  session.py  version.py
cli/src/fastlint/commands/: ci.py  install.py  login.py  publish.py  scan.py  wrapper.py
cli/src/fastlint/console_scripts/: entrypoint.py  pyfastlint.py
cli/src/semdep/: golang_version.py  maven_version.py  package_restrictions.py  subproject_matchers.py
cli/tests/: README.md  conftest.py  fastlint_runner.py  fixtures.py
cli/tests/qa/: public_repos.py  test_public_repos.py
interfaces/: Fastlint_prefilter.atd  Parsing_stats.atd  Rule_options.atd
tools/: hello_script.ml
tools/languages_dumper/: dune
tools/ojsonnet/: Main.ml  dune
tools/otarzan/: README.md
tools/otarzan/lib/: Parse.ml  dune
(+435 files in other folders)
