(executables
 (names Main)
 (libraries
    commons
    fastlint.ofastlint_core ; for CLI_Common flags
    ojsonnet
 )
 ; for ocamldebug
 (modes native byte)
 (preprocess
   (pps
     ppx_profiling
     ppx_deriving.show
     ppx_deriving.eq
   ))
)


(install
 (package fastlint)
 (section bin)
 (files (Main.exe as ojsonnet))
)
